log/build_2023-02-13_22-58-34/dofsensor/stderr.log
  File "C:\dev\robotic_hw\install\Lib\site-packages\dofsensor\server.py", line 35
    byte_data = self.sock.recv(self.port = port)
                               ^
SyntaxError: expression cannot contain assignment, perhaps you meant "=="?

